remove excluded studies from bib template

--- a/studies/metaMER_library_template.bib
+++ b/studies/metaMER_library_template.bib
@@ -1,4 +1,4 @@
-@{agarwal2021an,
+@Article{agarwal2021an,
   AUTHOR = {Agarwal, Gaurav and Om, Hari},
   JOURNAL = {IET Signal Processing},
   NOTE = {Cited by: 23},
@@ -42,7 +42,7 @@
 }
 
 
-@{alvarez2023ri,
+@Article{alvarez2023ri,
   AUTHOR = {Álvarez, P. and de Quirós, J. García and Baldassarri, S.},
   JOURNAL = {International Journal of Interactive Multimedia and Artificial Intelligence},
   NOTE = {Cited by: 4; All Open Access, Gold Open Access, Green Open Access},
@@ -86,7 +86,7 @@
 }
 
 
-@{bai2017mu,
+@Article{bai2017mu,
   AUTHOR = {Bai, Junjie and Luo, Kan and Peng, Jun and Shi, Jinliang and Wu, Ying and Feng, Lixiao and Li, Jianqing and Wang, Yingxu},
   JOURNAL = {International Journal of Cognitive Informatics and Natural Intelligence},
   NOTE = {Cited by: 6},
@@ -131,7 +131,7 @@
 }
 
 
-@{bhuvanakumar2023em,
+@Article{bhuvanakumar2023em,
   AUTHOR = {Bhuvana Kumar, V. and Kathiravan, M.},
   JOURNAL = {Frontiers in Computer Science},
   NOTE = {Cited by: 0; All Open Access, Gold Open Access},
@@ -173,7 +173,7 @@
 }
 
 
-@{dufour2021us,
+@Article{dufour2021us,
   AUTHOR = {Dufour, Isabelle and Tzanetakis, George},
   JOURNAL = {IEEE TRANSACTIONS ON AFFECTIVE COMPUTING},
   MONTH = {JUL-SEP},
@@ -216,7 +216,7 @@
 }
 
 
-@{feng2024ex,
+@Article{feng2024ex,
   AUTHOR = {Feng, Qiyue},
   JOURNAL = {Applied Mathematics and Nonlinear Sciences},
   NOTE = {Cited by: 0},
@@ -260,7 +260,7 @@
 }
 
 
-@{hizlisoy2021mu,
+@Article{hizlisoy2021mu,
   AUTHOR = {Hizlisoy, Serhat and Yildirim, Serdar and Tufekci, Zekeriya},
   JOURNAL = {Engineering Science and Technology, an International Journal},
   NOTE = {Cited by: 85; All Open Access, Gold Open Access},
@@ -304,7 +304,7 @@
 }
 
 
-@{nag2022on,
+@Article{nag2022on,
   AUTHOR = {Nag, Sayan and Basu, Medha and Sanyal, Shankha and Banerjee, Archi and Ghosh, Dipak},
   JOURNAL = {Physica A: Statistical Mechanics and its Applications},
   NOTE = {Cited by: 19},
@@ -347,7 +347,7 @@
 }
 
 
-@{nguyen2017an,
+@Article{nguyen2017an,
   AUTHOR = {Nguyen, Van Loi and Kim, Donglim and Ho, Van Phi and Lim, Younghwan},
   JOURNAL = {International Journal of Electrical and Computer Engineering},
   NOTE = {Cited by: 14},
@@ -391,7 +391,7 @@
 }
 
 
-@{panda2020no,
+@Article{panda2020no,
   AUTHOR = {Panda, Renato and Malheiro, Ricardo and Paiva, Rui Pedro},
   JOURNAL = {IEEE Transactions on Affective Computing},
   NOTE = {Cited by: 83; All Open Access, Green Open Access},
@@ -436,7 +436,7 @@
 }
 
 
-@{sorussa2020em,
+@Article{sorussa2020em,
   AUTHOR = {Sorussa, Kanawat and Choksuriwong, Anant and Karnjanadecha, Montri},
   JOURNAL = {ECTI Transactions on Computer and Information Technology},
   NOTE = {Cited by: 4; All Open Access, Gold Open Access},
@@ -480,7 +480,7 @@
 }
 
 
-@{yang2021an,
+@Article{yang2021an,
   AUTHOR = {Yang, Jing},
   JOURNAL = {Frontiers in Psychology},
   NOTE = {Cited by: 14; All Open Access, Gold Open Access, Green Open Access},
@@ -522,7 +522,7 @@
 }
 
 
-@{yeh2014po,
+@Article{yeh2014po,
   AUTHOR = {Yeh, Chia-Hung and Tseng, Wen-Yu and Chen, Chia-Yen and Lin, Yu-Dun and Tsai, Yi-Ren and Bi, Hsuan-I and Lin, Yu-Ching and Lin, Ho-Yi},
   JOURNAL = {Multimedia Tools and Applications},
   NOTE = {Cited by: 11},
@@ -567,7 +567,7 @@
 }
 
 
-@{zhang2017fe,
+@Article{zhang2017fe,
   AUTHOR = {Zhang, Jiang Long and Huang, Xiang Lin and Yang, Li Fang and Xu, Ye and Sun, Shu Tao},
   JOURNAL = {Multimedia Systems},
   NOTE = {Cited by: 10},
@@ -612,7 +612,7 @@
 }
 
 
-@{bai2016di,
+@Article{bai2016di,
   AUTHOR = {Bai, Junjie and Feng, Lixiao and Peng, Jun and Shi, Jinliang and Luo, Kan and Li, Zuojin and Liao, Lu and Wang, Yingxu},
   JOURNAL = {INTERNATIONAL JOURNAL OF COGNITIVE INFORMATICS AND NATURAL INTELLIGENCE},
   MONTH = {OCT-DEC},
@@ -655,7 +655,7 @@
 }
 
 
-@{battcock2021in,
+@Article{battcock2021in,
   AUTHOR = {Battcock, Aimee and Schutz, Michael},
   JOURNAL = {JOURNAL OF NEW MUSIC RESEARCH},
   MONTH = {OCT 20},
@@ -698,7 +698,7 @@
 }
 
 
-@{beveridge2018po,
+@Article{beveridge2018po,
   AUTHOR = {Beveridge, Scott and Knox, Don},
   JOURNAL = {PSYCHOLOGY OF MUSIC},
   MONTH = {MAY},
@@ -741,7 +741,7 @@
 }
 
 
-@{cao2023th,
+@Article{cao2023th,
   AUTHOR = {Cao, Yujing and Park, Jinwan},
   JOURNAL = {IEEE ACCESS},
   PAGES = {141192-141204},
@@ -780,7 +780,7 @@
 }
 
 
-@{chen2017co,
+@Article{chen2017co,
   AUTHOR = {Chen, Yu-An and Wang, Ju-Chiang and Yang, Yi-Hsuan and Chen, Homer H.},
   JOURNAL = {IEEE-ACM TRANSACTIONS ON AUDIO SPEECH AND LANGUAGE PROCESSING},
   MONTH = {JUL},
@@ -822,7 +822,7 @@
 }
 
 
-@{chin2018pr,
+@Article{chin2018pr,
   AUTHOR = {Chin, Yu-Hao and Wang, Jia-Ching and Wang, Ju-Chiang and Yang, Yi-Hsuan},
   JOURNAL = {IEEE TRANSACTIONS ON AFFECTIVE COMPUTING},
   MONTH = {OCT-DEC},
@@ -863,7 +863,7 @@
 }
 
 
-@{coutinho2017sh,
+@Article{coutinho2017sh,
   AUTHOR = {Coutinho, Eduardo and Schuller, Bjorn},
   JOURNAL = {PLOS ONE},
   MONTH = {JUN 28},
@@ -906,7 +906,7 @@
 }
 
 
-@{deng2015em,
+@Article{deng2015em,
   AUTHOR = {Deng, James J. and Leung, Clement H. C. and Milani, Alfredo and Chen, Li},
   JOURNAL = {ACM TRANSACTIONS ON INTERACTIVE INTELLIGENT SYSTEMS},
   MONTH = {MAR},
@@ -949,7 +949,7 @@
 }
 
 
-@{gingras2014be,
+@Article{gingras2014be,
   AUTHOR = {Gingras, Bruno and Marin, Manuela M. and Fitch, W. Tecumseh},
   JOURNAL = {Quarterly Journal of Experimental Psychology},
   NOTE = {Cited by: 32},
@@ -994,7 +994,7 @@
 }
 
 
-@{grekow2018au,
+@Article{grekow2018au,
   AUTHOR = {Grekow, Jacek},
   JOURNAL = {JOURNAL OF INFORMATION AND TELECOMMUNICATION},
   MONTH = {JUL 3},
@@ -1037,7 +1037,7 @@
 }
 
 
-@{grekow2021mu,
+@Article{grekow2021mu,
   AUTHOR = {Grekow, Jacek},
   JOURNAL = {JOURNAL OF INTELLIGENT INFORMATION SYSTEMS},
   MONTH = {DEC},
@@ -1082,7 +1082,7 @@
 }
 
 
-@{griffiths2021am,
+@Article{griffiths2021am,
   AUTHOR = {Griffiths, Darryl and Cunningham, Stuart and Weinel, Jonathan and Picking, Richard},
   JOURNAL = {JOURNAL OF NEW MUSIC RESEARCH},
   MONTH = {AUG 8},
@@ -1127,7 +1127,7 @@
 }
 
 
-@{hu2017cr,
+@Article{hu2017cr,
   AUTHOR = {Hu, Xiao and Yang, Yi-Hsuan},
   JOURNAL = {IEEE TRANSACTIONS ON AFFECTIVE COMPUTING},
   MONTH = {APR-JUN},
@@ -1170,7 +1170,7 @@
 }
 
 
-@{hu2022de,
+@Article{hu2022de,
   AUTHOR = {Hu, Xiao and Li, Fanjie and Liu, Ruilun},
   JOURNAL = {APPLIED SCIENCES-BASEL},
   MONTH = {SEP},
@@ -1214,7 +1214,7 @@
 }
 
 
-@{koh2023me,
+@Article{koh2023me,
   AUTHOR = {Koh, En Yan and Cheuk, Kin Wai and Heung, Kwan Yee and Agres, Kat R. and Herremans, Dorien},
   JOURNAL = {SENSORS},
   MONTH = {JAN},
@@ -1257,7 +1257,7 @@
 }
 
 
-@{malheiro2018em,
+@Article{malheiro2018em,
   AUTHOR = {Malheiro, Ricardo and Panda, Renato and Gomes, Paulo and Paiva, Rui Pedro},
   JOURNAL = {IEEE TRANSACTIONS ON AFFECTIVE COMPUTING},
   MONTH = {APR-JUN},
@@ -1300,7 +1300,7 @@
 }
 
 
-@{markov2014mu,
+@Article{markov2014mu,
   AUTHOR = {Markov, Konstantin and Matsui, Tomoko},
   JOURNAL = {IEEE Access},
   NOTE = {Cited by: 73; All Open Access, Gold Open Access},
@@ -1344,7 +1344,7 @@
 }
 
 
-@{medina2020em,
+@Article{medina2020em,
   AUTHOR = {Medina, Yesid Ospitia and Beltran, Jose Ramon and Baldassarri, Sandra},
   JOURNAL = {PERSONAL AND UBIQUITOUS COMPUTING},
   MONTH = {2020 APR 15},
@@ -1386,7 +1386,7 @@
 }
 
 
-@{orjesek2022en,
+@Article{orjesek2022en,
   AUTHOR = {Orjesek, Richard and Jarina, Roman and Chmulik, Michal},
   JOURNAL = {MULTIMEDIA TOOLS AND APPLICATIONS},
   MONTH = {FEB},
@@ -1431,7 +1431,7 @@
 }
 
 
-@{panwar2019ar,
+@Article{panwar2019ar,
   AUTHOR = {Panwar, Sharaj and Rad, Paul and Choo, Kim-Kwang Raymond and Roopaei, Mehdi},
   JOURNAL = {JOURNAL OF SUPERCOMPUTING},
   MONTH = {JUN},
@@ -1475,7 +1475,7 @@
 }
 
 
-@{saizclar2022pr,
+@Article{saizclar2022pr,
   AUTHOR = {Saiz-Clar, Elena and Angel Serrano, Miguel and Manuel Reales, Jose},
   JOURNAL = {PSYCHOLOGY OF MUSIC},
   MONTH = {JUL},
@@ -1520,7 +1520,7 @@
 }
 
 
-@{vempala2024pr,
+@Article{vempala2024pr,
   AUTHOR = {Vempala, Naresh and Russo, Frank and Lab, Smart},
   MONTH = {},
   TITLE = {Predicting Emotion from Music Audio Features Using Neural Networks},
@@ -1562,7 +1562,7 @@
 }
 
 
-@{wang2021ac,
+@Article{wang2021ac,
   AUTHOR = {Wang, Xin and Wei, Yujia and Heng, Lena and McAdams, Stephen},
   JOURNAL = {FRONTIERS IN PSYCHOLOGY},
   MONTH = {SEP 29},
@@ -1604,7 +1604,7 @@
 }
 
 
-@{wang2022co,
+@Article{wang2022co,
   AUTHOR = {Wang, Xin and Wang, Li and Xie, Lingyun},
   JOURNAL = {Applied Sciences (Switzerland)},
   NOTE = {Cited by: 7; All Open Access, Gold Open Access},
@@ -1647,7 +1647,7 @@
 }
 
 
-@{wang2022cr,
+@Article{wang2022cr,
   AUTHOR = {Wang, Xin and Wei, Yujia and Yang, Dasheng},
   JOURNAL = {COGNITIVE COMPUTATION AND SYSTEMS},
   MONTH = {JUN},
@@ -1689,7 +1689,7 @@
 }
 
 
-@{xia2022st,
+@Article{xia2022st,
   AUTHOR = {Xia, Yu and Xu, Fumei},
   JOURNAL = {Mathematical Problems in Engineering},
   NOTE = {Cited by: 6; All Open Access, Gold Open Access},
@@ -1731,7 +1731,7 @@
 }
 
 
-@{xie2020mu,
+@Article{xie2020mu,
   AUTHOR = {Xie, Baijun and Kim, Jonathan C. and Park, Chung Hyuk},
   JOURNAL = {APPLIED SCIENCES-BASEL},
   MONTH = {FEB},
@@ -1773,7 +1773,7 @@
 }
 
 
-@{xu2021us,
+@Article{xu2021us,
   AUTHOR = {Xu, Liang and Sun, Zaoyi and Wen, Xin and Huang, Zhengxi and Chao, Chi-ju and Xu, Liuchang},
   JOURNAL = {PEERJ COMPUTER SCIENCE},
   MONTH = {NOV 15},
@@ -1814,7 +1814,7 @@
 }
 
 
-@{zhang2016br,
+@Article{zhang2016br,
   AUTHOR = {Zhang, JiangLong and Huang, XiangLin and Yang, Lifang and Nie, Liqiang},
   JOURNAL = {NEUROCOMPUTING},
   MONTH = {OCT 5},
@@ -1857,7 +1857,7 @@
 }
 
 
-@{zhang2019us,
+@Article{zhang2019us,
   AUTHOR = {Zhang, Le-kai and Sun, Shou-qian and Xing, Bai-xi and Luo, Rui-ming and Zhang, Ke-jun},
   JOURNAL = {FRONTIERS OF INFORMATION TECHNOLOGY \& ELECTRONIC ENGINEERING},
   MONTH = {JUL},
@@ -1900,7 +1900,7 @@
 }
 
 
-@{zhang2023mo,
+@Article{zhang2023mo,
   AUTHOR = {Zhang, Meixian and Zhu, Yonghua and Zhang, Wenjun and Zhu, Yunwen and Feng, Tianyu},
   JOURNAL = {MULTIMEDIA TOOLS AND APPLICATIONS},
   MONTH = {FEB},
@@ -1945,7 +1945,7 @@
 }
 
 
-@{zhang2024ap,
+@Article{zhang2024ap,
   AUTHOR = {Zhang, Yao and Cai, Delin and Zhang, Dongmei},
   JOURNAL = {Environment and Social Psychology},
   NOTE = {Cited by: 0; All Open Access, Gold Open Access},
