--- a/studies/metaMER_library_extraction_first_pass.bib
+++ b/studies/metaMER_library_extraction_first_pass.bib
@@ -337,7 +337,8 @@ MODEL_RATE_EMOTION_VALUES_FULL_REDUCED2D = { rbind(
   MODEL_COMPLEXITY_PARAMETERS = { },
   MODEL_RATE_EMOTION_NAMES = { },
   MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  MODEL_VALIDATION = { },
+  DISCUSS = {T} %% non-specialized journal?
 }
 
 
@@ -636,28 +637,41 @@ rbind(multiclass_lm = c(
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
   NOTES_TE = {include, classification},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {happy, sad, nervous, calm},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {MediaEval},
+  STIMULUS_DURATION = {45},
+  STIMULUS_DURATION_UNIT =  {s},
+  STIMULUS_N = {744},
+  FEATURE_N = {}, %% 7 in best model
+  PARTICIPANT_N = {specified elsewhere},
+  PARTICIPANT_EXPERTISE = {specified elsewhere},
+  PARTICIPANT_ORIGIN = {specified elsewhere},
+  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_TASK = {specified elsewhere},
+  FEATURE_CATEGORIES = {timbre, dynamic, },
+  FEATURE_SOURCE =  {not specified},
+  FEATURE_REDUCTION_METHOD =  {back-propogation},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {back-propogation neural network, artificial bee colony algorithm, SVM, KNN, GMM, BP},
+  MODEL_MEASURE = {MAE, RMSE, R2},
+  MODEL_COMPLEXITY_PARAMETERS = {not specified},
+  MODEL_RATE_EMOTION_NAMES = {happy, sad, nervous, calm}, 
+  MODEL_RATE_EMOTION_VALUES = {
+rbind(
+    SVM = c(MAE_valence = 1.1253, RMSE_valence = 0.1392, R2_valence = 0.4374,
+            MAE_arousal = 1.3091, RMSE_arousal = 0.1405, R2_arousal = 0.5663),
+    KNN = c(1.0974,0.2988,0.4403,
+            1.1686,0.3265,0.5881),
+    GMM = c(1.2342,0.3072,0.4236,
+            1.4105,0.3136,0.5712),
+    BP = c(1.1066,0.1190,0.4576,
+           1.1987,0.1284,0.6284),
+    proposed = c(0.8872,0.1066,0.4606,
+                 0.9156,0.1322,0.6687)
+)},
+  MODEL_VALIDATION = {80/20 train-test split},
+  DISCUSS = {T}
 }
 
 
@@ -681,13 +695,13 @@ rbind(multiclass_lm = c(
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
   NOTES_TE = {include, or unclear, report classification broadly/vaguely},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
+  EMOTIONS = {happy, angry, depressed, relaxed},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {chorus of popular music, chorus of MIREX 2009 collection},
+  STIMULUS_DURATION = {},
   STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
+  STIMULUS_N = {350},
+  FEATURE_N = {3}, %% intensity, rhythm regularity, frequency subband
   PARTICIPANT_N = { },
   PARTICIPANT_EXPERTISE = { },
   PARTICIPANT_ORIGIN = { },
@@ -696,9 +710,9 @@ rbind(multiclass_lm = c(
   FEATURE_CATEGORIES = { },
   FEATURE_SOURCE = { },
   FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
+  MODEL_CATEGORY = {classification},
+  MODEL_DETAIL = {Adaboost},
+  MODEL_MEASURE = {precision, recall},
   MODEL_COMPLEXITY_PARAMETERS = { },
   MODEL_RATE_EMOTION_NAMES = { },
   MODEL_RATE_EMOTION_VALUES = { },
@@ -726,28 +740,29 @@ rbind(multiclass_lm = c(
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
   NOTES_TE = {include},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
+  EMOTIONS = {arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {Chinese popular songs},
+  STIMULUS_DURATION = {30},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {171},
+  FEATURE_N = {8},
   PARTICIPANT_N = { },
   PARTICIPANT_EXPERTISE = { },
   PARTICIPANT_ORIGIN = { },
   PARTICIPANT_SAMPLING = { },
   PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
+  FEATURE_CATEGORIES = {dynamic},
   FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
+  FEATURE_REDUCTION_METHOD = {Relief-F, CFS, Pearson correlation filter, Spearman correlation filter, information gain, gain-ratio },
   MODEL_CATEGORY = { },
   MODEL_DETAIL = { },
   MODEL_MEASURE = { },
   MODEL_COMPLEXITY_PARAMETERS = { },
   MODEL_RATE_EMOTION_NAMES = { },
   MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  MODEL_VALIDATION = { },
+  DISCUSS = {T} %% insufficient details on classification
 }
 
 
@@ -1437,28 +1452,33 @@ MODEL_RATE_EMOTION_VALUES_PRETRAINED = {
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, linear regression},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {},
+  STIMULUS_DURATION = {variable},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {c(study1=20, study2=40)}, % three outliers
+  FEATURE_N = {before_selection = 45, after_selection = 6},
+  PARTICIPANT_N = {study1=44, study2 = 158},
+  PARTICIPANT_EXPERTISE = {not specified},
+  PARTICIPANT_ORIGIN = {Auditory Mailing List, Social Media},
+  PARTICIPANT_SAMPLING = {convenience},
+  PARTICIPANT_TASK = {self-report}, %% categorical emotions with intensity prompt; reverse-engineered for circumplex representation
+  FEATURE_CATEGORIES = {rbind(before_selection = c('dynamic', 'timbre', 'tonality', 'rhythm'), after_selection = c('dynamic', 'timbre'))},
+  FEATURE_SOURCE = {MIR Toolbox, Matlab Audio Analysis Library},
+  FEATURE_REDUCTION_METHOD = {Spearman correlation ranking},
+  MODEL_CATEGORY = {perceived},
+  MODEL_DETAIL = {multiple linear regression},
+  MODEL_MEASURE = {R2, MSE, SSE},
+  MODEL_COMPLEXITY_PARAMETERS = {4},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = {list(
+  study2 = c(r2_arousal = 0.708, sse_arousal = 29.700, rmse_arousal = 0.084, r2.95l_arousal = 0.691, r2.95u_arousal = 1.059,
+                  r2_valence = 0.674, sse_valence = 30.581, rmse_valence = 0.897, r2.95l_valence = 0.562, r2.95u_valence = 0.894),
+  study2.no.outliers = c(0.85,12.341,0.585,0.841,1.118,
+                  0.776,19.7,0.74,0.63,0.91)
+)}, %% only reported results of study 2, as study 1 regressed only individual features
+  MODEL_VALIDATION = {study2} %% study 2 is the validation of model developed in study 1
 }
 
 
@@ -1480,28 +1500,67 @@ MODEL_RATE_EMOTION_VALUES_PRETRAINED = {
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {MER60, CH818, AMG1608},
+  STIMULUS_DURATION = {MER60 = 30, CH818 = 30, AMG1608 = 60},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {MER60 = 60, CH818 = 818, AMG1608 = 1608},
+  FEATURE_N = {15}, %% 23 in table, but 15 reported
+  PARTICIPANT_N = {}, %% 40 per clip, 3 per clip, 15-32 per clip
+  PARTICIPANT_EXPERTISE =  {MER60 = nonexperts, CH818 = experts, AMG1608 =nonexperts },
+  PARTICIPANT_ORIGIN = {MER60 = Taiwan, CH818 = China, AMG1608 = MTurk},
+  PARTICIPANT_SAMPLING = {MER60 = convenience, CH818 = experts, AMG1608 = crowdsource},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {Loudness, Pitch, Rhythm, Tonality, Timbre},
+  FEATURE_SOURCE = {MIR Toolbox, PsySound, Chroma Toolbox,, Tempogram Toolbox},
+  FEATURE_REDUCTION_METHOD = {step-wise forward feature selection algorithm},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {
+list(
+'support vector regression with radial basis function',
+rbind(
+exp1 = c(train = 'complete set', test = 'complete set', factor.examined = 'combined features'),
+exp2 = c(train = 'selected set (random)', test = 'complete set', factor.examined = 'size of training data'),
+exp3 = c(train = 'selected set (controlled)', test = 'complete set', factor.examined = 'reliability level (close to that of mer 60) of training dataset'),
+exp4 = c(train = 'selected set (controlled)', test = 'selected set (controlled)', factor.examined = 'reliability level (close to that of mer 60) of training and test datasets'),
+exp5 = c(train = 'selected sets (varied)', test = 'selected sets (varied)', factor.examined = 'reliability level (varied) of training and test datasets')
+		)
+	)
+},
+  MODEL_MEASURE = {R2},
+  MODEL_COMPLEXITY_PARAMETERS = {parameters optimized through grid searches},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = {list(
+valence =  rbind(mer_mer = c(exp1 = 0.18, exp2 = 0.18, exp3 = 0.18, exp4 = 0.18),
+        ch_mer = c(0.27,0.19,0.25,0.25),
+        amg_mer = c(0.40,0.22,0.2,0.2),
+        mer_ch = c(0.13,0.13,0.13,0.53),
+        ch_ch = c(0.25,0.15,0.10,0.28),
+        amg_ch = c(0.21,0.06,0.04,0.2),
+        mer_amg = c(0.08,0.08,0.08,0.33),
+        ch_amg = c(0.07,0.02,0.02,0.13),
+        amg_amg = c(0.14,0.03,0.06,0.19),
+        within = c(0.19,0.12,0.11,0.22),
+        cross = c(0.19,0.12,0.12,0.28),
+        all = c(0.19,0.12,0.12,0.26)
+  ),
+arousal =   rbind(mer_mer = c(exp1 = 0.68, exp2 = 0.68, exp3 = 0.68, exp4 = 0.68),
+        ch_mer = c(0.8,0.74,0.75,0.75),
+        amg_mer = c(0.75,0.67,0.65,0.65),
+        mer_ch = c(0.7,0.7,0.7,0.59),
+        ch_ch = c(0.77,0.72,0.74,0.81),
+        amg_ch = c(0.68,0.67,0.63,0.66),
+        mer_amg = c(0.61,0.61,0.61,0.73),
+        ch_amg = c(0.66,0.57,0.59,0.71),
+        amg_amg = c(0.73,0.63,0.63,0.72),
+        within = c(0.73,0.68,0.68,0.74),
+        cross = c(0.7,0.66,0.66,0.68),
+        all = c(0.71,0.67,0.67,0.7)
+  )
+)
+ }, %% unsure how to split up individual experiments and include details about them
+  MODEL_VALIDATION = {10-fold cross validation}
 }
 
 
