--- a/studies/metaMER_library_extraction_first_pass.bib
+++ b/studies/metaMER_library_extraction_first_pass.bib
@@ -1857,6 +1857,7 @@ MODEL_RATE_EMOTION_VALUES_PRETRAINED = {
 @Article{vempala2024pr,
   AUTHOR = {Vempala, Naresh and Russo, Frank and Lab, Smart},
   MONTH = {},
+  JOURNAL = {CMMR 2012},
   TITLE = {Predicting Emotion from Music Audio Features Using Neural Networks},
   YEAR = {2024},
   DOI = {10.32920/25413184},
